--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -7,12 +7,13 @@
         <H1>States</H1>
         <UL>
         {% for key, value in states.items()|sort(attribute='1.name') %}
-			<LI>{{ value.id }}: <B>{{ value.name }}</B></LI>
-				<UL>
-					{% for city in value.cities|sort(attribute='name') %}
-						<LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
-					{% endfor %}
-				</UL>
+            <LI>{{ value.id }}: <B>{{ value.name }}</B>
+                <UL>
+                    {% for city in value.cities|sort(attribute='name') %}
+                        <LI>{{ city.id }}: <B>{{ city.name }}</B></LI>
+                    {% endfor %}
+                </UL>
+            </LI>
         {% endfor %}
         </UL>
     </BODY>
