--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -1,4 +1,11 @@
-body {
-    margin: 0;
-    padding: 0;
+/*
+  ========================================
+  General style
+  ========================================
+*/
+
+body
+{
+	padding: 0px;
+	margin: 0px;
 }
