--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,15 +1,19 @@
-footer {
-    position: fixed;
-    background: #00FF00;
-    height: 60px;
-    width: 100%;
-    bottom: 0;
+/*
+  ========================================
+  Style for FOOTER
+  ========================================
+*/
+
+footer
+{
+	background-color: #00FF00;
+	height: 60px;
+	width: 100%;
+	position: absolute;
+	bottom: 0px;
 }
-footer p {
-    position: absolute;
-    text-align: center;
-    top: 10%;
-    bottom: 0;
-    right: 0;
-    left: 0;
+p
+{
+	text-align: center;
+	padding: 5px;
 }
