--- a/web_static/styles/2-header.css
+++ b/web_static/styles/2-header.css
@@ -1,5 +1,13 @@
-header {
-    background: #FF0000;
-    height: 70px;
-    width: 100%;
+/*
+  ========================================
+  Style for HEADER
+  ========================================
+*/
+
+header.Principal_header
+{
+	background-color: #FF0000;
+	height: 70px;
+	width: 100%;
+	margin: 0px;
 }
