--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -1,7 +1,14 @@
-body {
-    margin: 0;
-    padding: 0;
-    color: #484848;
-    font-size: 14px;
-    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+/*
+  ========================================
+  General style
+  ========================================
+*/
+
+body
+{
+	color: #484848;
+	font-size: 14px;
+	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	padding: 0px;
+	margin: 0px;
 }
