--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,11 +1,30 @@
-header {
-    background: white;
-    height: 70px;
-    width: 100%;
-    border-bottom: 1px solid #CCCCCC;
+/*
+  ========================================
+  Style for HEADER
+  ========================================
+*/
+header.Principal_header
+{
+	background-color: #FFFFFF;
+	border-bottom-width: 1px;
+	border-top-width: 0px;
+	border-left-width: 0px;
+	border-right-width: 0px;
+	border-style: solid;
+	border-color: #CCCCCC;
+	height: 70px;
+	width: 100%;
+	margin: 0px;
+	padding: 0px;
 }
-header .logo {
-    background: url("../images/logo.png") no-repeat;
-    left: 20px;
-    height: 100%;
+
+div.Logo
+{
+	width: 142px;
+	height: 60px;
+	position: absolute;
+	top:  5px;
+	left: 20px;
+	background-image: url(/AirBnB_clone/web_static/images/Logo.png);
 }
+
