--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,23 +1,40 @@
-.container .filters {
-    position: relative;
-    background: white;
-    height: 70px;
+/*
+  ========================================
+  Style for Filters
+  ========================================
+*/
+
+section.filters
+{
+    background-color: #ffffff;
     width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+    height: 70px;
+	border-bottom-width: 1px;
+	border-top-width: 1px;
+	border-left-width: 1px;
+	border-right-width: 1px;
+	border-radius: 4px;
+    border-color: #dddddd;
+    border-style: solid;
 }
-button {
-    position: absolute;
-    font-size: 18px;
-    background: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border-style: none;
-    border-radius: 4px;
-    top: 15%;
-    right: 30px;
+
+button.Search
+{
+    z-index: 4;
+	position: relative;
+	top: 11px;
+	right: -77%;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	font-size: 18px;
+	height: 48px;
+	width: 20%;
+	border: 0px;
+	border-radius: 4px;
+	opacity: 100%;
+    margin: 0 auto;
+    cursor: pointer;
 }
-button:hover {
-    opacity: 0.9;
-}
+
+button.Search:hover
+{opacity: 90%;}
