--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,43 +1,67 @@
-.container .filters {
-    position: relative;
-    background: white;
-    height: 70px;
+/*
+  ========================================
+  Style for Filters
+  ========================================
+*/
+
+section.filters
+{
+    background-color: #ffffff;
     width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+    height: 70px;
+	border-bottom-width: 1px;
+	border-top-width: 1px;
+	border-left-width: 1px;
+	border-right-width: 1px;
+	border-radius: 4px;
+    border-color: #dddddd;
+    border-style: solid;
 }
-button {
-    position: absolute;
-    font-size: 18px;
-    background: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border-style: none;
-    border-radius: 4px;
-    top: 15%;
-    right: 30px;
-}
-button:hover {
-    opacity: 0.9;
-}
-.filters div {
-    display: inline-block;
+
+div.locations
+{
     position: relative;
+    top: -49px;
+	left: 5%;
+    height: 100%;
+    width: 25%;
+    border: 1px;
+    border-left-width: 0px;
+    border-style: solid;
+    border-color: #dddddd;
+}
+
+div.amenities
+{
+    position: relative;
+    top: -120px;
+    left: 35%;
     height: 100%;
     width: 25%;
 }
-.filters h3 {
-    margin-left: 15%;
-    margin-bottom: 0;
-    font-weight: 600;
+
+button.Search
+{
+    z-index: 4;
+	position: relative;
+	top: 11px;
+	right: -77%;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	font-size: 18px;
+	height: 48px;
+	width: 20%;
+	border: 0px;
+	border-radius: 4px;
+	opacity: 100%;
+    margin: 0 auto;
+    cursor: pointer;
 }
-.filters h4 {
-    margin-left: 15%;
-    margin-top: 0;
-    font-weight: 400;
-    font-size: 14px;
-}
-.locations {
-    border-right: 1px solid #DDDDDD;
-}
+
+button.Search:hover
+{opacity: 90%;}
+
+h3
+{font-weight: 600; position: relative; top: 0px;}
+h4
+{font-weight: 400; font-size: 14px; position: relative; top: -15px;}
