--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,75 +1,128 @@
-.container .filters {
-    position: relative;
-    background: white;
+/*
+  ========================================
+  Style for Filters
+  ========================================
+*/
+
+section.filters
+{
+    background-color: #ffffff;
+    width: 100%;
     height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+	border-bottom-width: 1px;
+	border-top-width: 1px;
+	border-left-width: 1px;
+	border-right-width: 1px;
+	border-radius: 4px;
+    border-color: #dddddd;
+    border-style: solid;
 }
-button {
+
+div.locations
+{
+    position: relative;
+    top: -49px;
+    padding-left: 50px;
+    height: 100%;
+    width: 25%;
+    border: 1px;
+    border-left-width: 0px;
+    border-style: solid;
+    border-color: #dddddd;
+}
+
+div.amenities
+{
+    position: relative;
+    top: -120px;
+    left: 30%;
+    height: 80%;
+    width: 25%;
+    padding-top: 2px;
+    padding-bottom: 13px;
+    padding-left: 45px;
+    margin-bottom: 0px;
+}
+
+button.Search
+{
+    z-index: 4;
+	position: relative;
+	top: 11px;
+	right: -77%;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	font-size: 18px;
+	height: 48px;
+	width: 20%;
+	border: 0px;
+	border-radius: 4px;
+	opacity: 100%;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+button.Search:hover
+{opacity: 90%;}
+
+h2
+{font-size: 16px; position: relative; top: 0px;}
+h3
+{font-weight: 600; position: relative; top: 0px;}
+h4
+{font-weight: 400; font-size: 14px; position: relative; top: -18px;}
+
+ul.popover_1
+{
     position: absolute;
-    font-size: 18px;
-    background: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border-style: none;
+    top: 70px;
+    left: 0px;
+    width: 86%;
+    padding: 20px;
+    list-style-type: none;
+    background-color: #FAFAFA;
+    border: 1px;
+    border-color: #dddddd;
+    border-style: solid;
     border-radius: 4px;
-    top: 15%;
-    right: 30px;
+    text-align: left;
+    text-indent: -20px;
+    display: none;
+    margin: 0px;
+    z-index: 100;
 }
-button:hover {
-    opacity: 0.9;
-}
-.filters div {
-    display: inline-grid;
-}
-.filters h2 {
-    margin-left: 15%;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-weight: 600;
-}
-.filters h3 {
-    margin-left: 15%;
-    margin-bottom: 0;
-    font-weight: 600;
-}
-.filters h4 {
-    margin-left: 15%;
-    margin-top: 0;
-    font-weight: 400;
-    font-size: 14px;
-}
-.locations {
-    height: 100%;
-    width: 25%;
-    border-right: 1px solid #DDDDDD;
-}
-.amenities {
-    height: 100%;
-    width: 25%;
-}
-.popover {
-    visibility: hidden;
-    width: 100%;
-    border: 1px solid #DDDDDD;
+
+ul.popover_2
+{
+    position: absolute;
+    top: 70px;
+    left: 0px;
+    width: 86%;
+    padding: 20px;
+    list-style-type: none;
+    background-color: #FAFAFA;
+    border: 1px;
+    border-color: #dddddd;
+    border-style: solid;
     border-radius: 4px;
-    background: #FAFAFA;
-    padding-bottom: 25px;
+    text-align: left;
+    text-indent: -20px;
+    display: none;
+    margin: 0px;
+    z-index: 100;
 }
-.amenities .popover {
-    padding: 20px 0;
-    margin-left: -5px;
-    margin-top: 1%;
-}
-.locations .popover {
-    margin-top: 1%;
-}
-.popover ul {
+
+li
+{
+    text-align: left;
+    text-indent: 5px;
+    position: relative;
+    line-height: 20px;
     list-style-type: none;
 }
-.amenities:hover .popover,
-.locations:hover .popover {
-    visibility: visible;
-}
+
+div.locations:hover ul.popover_1
+{display: block; cursor: pointer;}
+
+div.amenities:hover ul.popover_2
+{display: block; cursor: pointer;}
