--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,24 +1,33 @@
-.places {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 0 20px;
+/*
+  ========================================
+  Style for places
+  ========================================
+*/
+
+h1 {text-align: left; font-size: 30px; width: 100%;}
+
+section.places
+{
+	margin-top: 30px;
+	margin-bottom: 70px;
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-around;
 }
-.places h1 {
-    width: 100%;
-    text-align: left;
-    font-size: 30px;
+
+section.places article
+{
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: 1px;
+	border-style: solid;
+	border-color: #FF5A5F;
+	border-radius: 4px;
 }
-.places article {
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-}
-.places h2 {
+
+article h2
+{
 	font-size: 30px;
 	text-align: center;
-	margin-top: 0;
 }
