--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -22,7 +22,7 @@
             </button>
             <div class="locations">
                 <h3>States</h3>
-                <h4>&nbsp</h4>
+                <h4>&nbsp;</h4>
                 <ul class="popover_1">
 					{%- for key, value in states.items()|sort(attribute='1.name')  %}
                     <li><h2>{{ value.name }}:</h2>
@@ -37,7 +37,7 @@
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
-                <h4>&nbsp</h4>
+                <h4>&nbsp;</h4>
                 <ul class="popover_2">
                     {% for key, value in amen.items()|sort(attribute='1.name')  %}
                     <li><h2>{{ value.name }}</h2></li>
